2001-10-19  Mark McLoughlin  <mark@skynet.ie>

	* menu.c: (create_root_menu): fix dumb bug.

	* menu-properties.c: (create_properties_dialog):
	port gnome_file_entry_set_directory.

2001-10-19  Mark McLoughlin  <mark@skynet.ie>

	* panel_config.c: (update_config_back), (value_changed),
	(background_page): gnome_pixmap_entry_gtk_entry to
	gnome_file_entry_gtk_entry.

2001-10-19  Glynn Foster <glynn.foster@sun.com>

	* menu.c: added casts to GTK_MENU to remove some compile
	  warnings 

2001-10-19  Mark McLoughlin  <mark@skynet.ie>

	* bad-applet.c: (main): ported to new stcok icons.

	* foobar-widget.c: (append_gnome_menu): ditto.

	* gnome-run.c: (show_run_dialog), (load_run_applet): ditto.

2001-10-18  Mark McLoughlin  <mark@skynet.ie>

	* applet.c, basep-widget.c, button-widget.c,
	  conditional.c, drawer.c, extern.c, foobar-widget.c
	  gnome-panel-properties.c, gnome-panel-screenshot.c
	  gnome-run.c, launcher.c, logout.c, main.c
	  menu-properties.c, menu-rh.c, menu.c:
	ported gnome_.*_file -> gnome_program_locate_file
	       gnome_unconditional_.*_file -> gnome_program_locate_file
	       g_file_exists -> g_file_test
	       g_unix_error_string -> g_strerror

2001-10-18  jacob berkman  <jacob@ximian.com>

	* session.h (PANEL_CONFIG_PATH): set to panel2.d so you don't
	wreck your normal panel settings

	* main.c (main): 
	* launcher.c (launcher_file_name): 
	* session.c (get_correct_prefix): use PANEL_CONFIG_PATH rather
	than hard coding the path

2001-10-18  Glynn Foster  <glynn.foster@sun.com>

	* basep-widget.c, gnome-panel-properties.c,
	* panel_config_global.h, session.c: Remove 'simple_movement' and
	  opt for the slightly more complicated sin() algorithm as default.

2001-10-18  Mark McLoughlin <mark@skynet.ie>

	* main.h, main.c (panel_main_gconf_client): impl.

	* foobar-widget.c (pixmap_menu_item_new): port from 
	gnome_preferences_* to gconf.
	(add_tearoff): ditto.

	* tearoffitem.c (tearoff_item_new): ditto.
