@@ -1,5 +1,10 @@
 2001-10-19  Mark McLoughlin  <mark@skynet.ie>
 
+	* menu.c: (create_menu_at_fr), (create_desktop_menu),
+	(create_root_menu): fix some silly bugs of mine.
+
+2001-10-19  Mark McLoughlin  <mark@skynet.ie>
+
 	* menu.c: (create_root_menu): fix dumb bug.
 
 	* menu-properties.c: (create_properties_dialog):
